name:                KSTest2Plot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ephoning/KSTest2Plot#readme
license:             BSD3
license-file:        LICENSE
author:              Edgar Honing
maintainer:          ephoning@gmail.com
copyright:           2017 Edgar Honing
category:            Analytics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >=4.6
                     , random >=0.1
                     , aeson >=0.7
                     , bytestring >=0.10
                     , easyplot >=1.0
  default-language:    Haskell2010

executable KSTest2Plot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring >=0.10
                     , KSTest2Plot
  default-language:    Haskell2010

test-suite KSTest2Plot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , KSTest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ephoning/KSTest2Plot
